--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-confirm": "^0.1.20",
     "react-dom": "^16.13.1",
     "react-history": "^0.18.2",
+    "react-moment": "^0.9.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
